--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ server {
     ...
 
     if ($starlink_user) {
-        rewrite ^ https://movim.eu/fuckstarlink;
+        rewrite ^ https://fuckstarlink.org/;
     }
 
     ...
