Add nginx conf file link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <h3>I host websites on nginx</h3>
 
-    <p>Put the IP blocks file in your <code>/etc/nginx/conf.d/</code> directory.</p>
+    <p>Put the <a href="configs/nginx/fuckstarlink.conf" target="_blank">IP blocks file</a> in your <code>/etc/nginx/conf.d/</code> directory.</p>
     <p>Add the following code snippet to all the websites you want to block:</p>
 
     <pre>
