Only redirect the root path to limit the harm on the other resources

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
 server {
     ...
 
-    if ($starlink_user) {
-        rewrite ^ https://fuckstarlink.org/;
+    location = / {
+        if ($starlink_user) {
+            rewrite ^ https://fuckstarlink.org/;
+        }
     }
-
     ...
 }
     </pre>
