--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li>Because several companies are already launching <a href="https://www.space.com/spacex-starlink-satellites.html"></a>their own mega-constellation of satellites</a>. In a few years tens of thousands of those satellites (up to <a href="https://www.businessinsider.com/elon-musk-starlink-satellites-internet">42.000 for Starlink</a>) will fly upon us, their short lifespan will require to launch each years thousands of new ones to maintain the fleet, causing important CO2 and methane emissions as well as mainy other environmental impact.</li>
     </ul>
 
-    <p style="margin-left: 1rem; font-style: italic;">Our environment, our climate and our skies are too precious a common good to be privatized in order to bring Internet access to a few privileged humans.</p>
+    <p style="margin-left: 1rem; font-style: italic;">Our environment, our climate and our sky are common goods that are too precious to be privatized to bring Internet acces for a few privileged humans.</p>
 
     <hr>
 
