--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <figcaption>Shot at 333 seconds exposure from CTIO's Blanco telescope (4 meters), the lines are from light pollution from Starlink satellites.</figcaption>
       </figure>
 
-    <p>It seems that you accessed a website using Starlink or a similar mega-constellation network. Or maybe you want to understand why the service they are delivering to a few is bigger than the harm they do to our societies and our environment.</p>
+    <p>It seems that you accessed a website using Starlink or a similar mega-constellation network. Or maybe you want to understand why the service they are delivering to a few is less important than the harm they do to our societies and our environment.</p>
 
     <p>We are not supporting the deployment of those mega-constellations to access the Internet:</p>
 
